# RLE-compress

./: CMakeLists.txt  LICENSE  README.md  алгоритм.txt  алгоритм.txt~  время написания первой версии c тестом.txt  время написания первой версии.txt  время создания теста.txt
.build/: CMakeCache.txt  Makefile  cmake_install.cmake  test_rle
include/: repeating_numbers_collect.h~  rle_compress.h  rle_compress_and_decompress.h  rle_compress_and_decompress_1_byte.h
src/: repeating_numbers_collect.c  rle_compress_and_decompress.c  rle_compress_and_decompress_1_byte.c
terminal_utile/: CMakeLists.txt  main.c
test/: main.c
